<resources>
    <string name="app_name">Notes</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete</string>
    <string name="save">Save</string>
    <string name="note_hint">Enter your note...</string>
    <string name="search_hint">Search notes...</string>
    <string name="no_notes">No notes available</string>
    <string name="confirm_delete">Delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_title_hint">Title</string>
    <string name="note_body_hint">Note text</string>
</resources>
